# haskell-craft

./: .ghci  .gitignore  CMD.lnk  GHCi.lnk  LICENSE  README.md
Chapter 1, 2/: Readme.md
Chapter 3/: B'C'3.hs  C'3.cabal  C'3.hs  E'3''1.hs  E'3''2.hs  E'3''3.hs  E'3''4.hs  E'3''5.hs  E'3''6.hs  E'3''7.hs  E'3''8.hs  E'3''9.hs  E'3'10.hs  E'3'11.hs  E'3'12.hs  E'3'14.hs  E'3'15.hs  E'3'17.hs  E'3'18.hs  E'3'20.hs  E'3'21.hs  E'3'23.hs  E'3'24.hs  E'3'25.hs  E'3'26.hs  E'3'27'.hs
Chapter 4/: B'C'4.hs  C'4.cabal  E'4''4.hs  E'4''5.hs  E'4''7.hs  E'4''8.hs  E'4''9.hs  E'4'10.hs  E'4'11.hs  E'4'12.hs  E'4'14.hs  E'4'15.hs  E'4'16.hs  E'4'18.hs  E'4'19.hs  E'4'20.hs  E'4'21.hs  E'4'25.hs  E'4'26.hs  E'4'27.hs  E'4'28.hs  E'4'31.hs  E'4'32.hs  E'4'33.hs  E'4'34.hs  E'4'36.hs  E'4'37.hs  E'4'38.hs  E'4'39.hs  GHCi (CMD).lnk  Readme.md
Chapter 4/Visualisation/: GHCi (CMD).lnk  Rendering.html  svgOut.xml
Chapter 5/: C'5.hs  E'5''1.hs  E'5''5.hs  E'5''6.hs  E'5''8.hs  E'5'11.hs  E'5'13.hs  E'5'14.hs  E'5'17.hs  E'5'18.hs  E'5'19.hs  E'5'22.hs  E'5'23.hs  E'5'27.hs  E'5'29.hs  E'5'32.hs  Readme.md  fibonacci_500.txt
Chapter 6/: C'6.cabal  E'6''1.hs  E'6''2.hs  E'6''3.hs  E'6''4.hs  E'6''6.hs  E'6''7.hs  E'6''9.hs  E'6'10.hs  E'6'11.hs  E'6'13.hs  E'6'14.hs  E'6'15.hs  E'6'18.hs  E'6'19.hs  E'6'20.hs  E'6'21.hs  E'6'23.hs  E'6'24.hs  E'6'27.hs  E'6'29.hs  E'6'30.hs  E'6'32.hs  E'6'33.hs  E'6'35.hs  E'6'37.hs  E'6'38.hs  E'6'40.hs  E'6'42.hs  E'6'43.hs  E'6'44.hs  E'6'45.hs  E'6'46.hs  E'6'47.hs  E'6'49.hs  E'6'50.hs  E'6'52.hs  E'6'53.hs  E'6'57.hs  E'6'58.hs  (+7 more)
Chapter 7/: C'7.cabal  C'7.hs  E'7''3.hs  E'7''9.hs  E'7'10.hs  E'7'12.hs  E'7'13.hs  E'7'15.hs  E'7'17.hs  E'7'20.hs  E'7'24.hs  E'7'25.hs  E'7'26.hs  E'7'28.hs  E'7'32.hs  E'7'34.hs  E'7'35.hs  QCC.hs  Readme.md
Chapter 8/: B'C'8.hs  C'8.hs  Chapter 8.cabal  E'8''1.hs  E'8''2.hs  E'8''3.hs  E'8''4.hs  E'8''5.hs  E'8''7.hs  E'8''8.hs  E'8''9.hs  E'8'11.hs  E'8'12.hs  E'8'13.hs  E'8'14.hs  E'8'15.hs  E'8'16.hs  E'8'17.hs  E'8'18.hs  E'8'20.hs  E'8'21.hs  E'8'22.hs  E'8'23.hs  Readme.md
Chapter 8/Builds/: Readme.md
Chapter 8/Builds/custom main/: Palindromes.hs  compile.windows.cmd
Chapter 8/Builds/standard main/: Palindromes.hs  compile.windows.cmd
Chapter 9/: E'9''5.hs  E'9''6.hs  E'9''8.hs  E'9''9.hs  E'9'10.hs
Chapter 10/: E'10''2.hs  E'10''5.hs  E'10''8.hs  E'10''9.hs  E'10'11.hs  E'10'12.hs  E'10'13.hs  E'10'17.hs  E'10'20.hs  E'10'21.hs  E'10'26.hs  E'10'27.hs  E'10'28.hs  E'10'29.hs  E'10'30.hs  E'10'32.hs  E'10'33.hs  E'10'35.hs  E'10'36.hs  E'10'37.hs  GHCi (CMD).lnk  Readme.md
Chapter 10/Tests/: E'10'22.prop_splitMerge.cmd.txt  E'10'22.prop_splitMerge.verboseCheck.txt  E'10'22.prop_splitMerge.windows.cmd
Chapter 11/: B'C'11.hs  C'11.hs  E'11''1.hs  E'11''2.hs  E'11''6.hs  E'11''7.hs  E'11''9.hs  E'11'13.hs  E'11'19.hs  E'11'21.hs  E'11'24.hs  E'11'30.hs  E'11'31.hs  E'11'33.hs  Readme.md
Chapter 13/: B'C'13.hs  C'13.hs  E'13''1.hs  E'13''2.hs  E'13''3.hs  E'13''4.hs  E'13''5.hs  E'13''6.hs  E'13''7.hs  E'13''8.hs  E'13''9.hs  E'13'10.hs  E'13'11.hs  E'13'12.hs  E'13'13.hs  E'13'14.hs  E'13'15'.hs  E'13'15.hs  E'13'16.hs  E'13'17.hs  E'13'18.hs  E'13'19.hs  E'13'20.hs  E'13'21.hs  E'13'22.hs  E'13'23.hs  E'13'24.hs  E'13'25.hs  E'13'26.hs  E'13'27.hs  E'13'28.hs  Readme.md  roman_numbers_1_to_3999.txt
Examples/: Readme.md
Examples/· Errors/: Common Mistakes.txt  E1.hs  E10.hs  E11.hs  E12.hs  E13.hs  E14.hs  E15.hs  E16.hs  E17.hs  E18.hs  E19.hs  E2.hs  E20.hs  E21.hs  E22.hs  E23.hs  E24.hs  E25.hs  E26.hs  E27.hs  E28.hs  E3.hs  E4.hs  E5.hs  E6.hs  E7.hs  E8.hs  E9.hs  Readme.md
Examples/· Recursion/: Readme.md
Examples/· Structural Induction/: I1.hs  I2.hs
Examples/· Ιet … in … constructs/: SplitWhen.hs  Unzip.hs
Exercises/: Readme.md
Exercises/Primitive Recursion/: ItemsEqual.hs  (+1 more)
_/: craft3e.windows.cmd  links.windows.cmd  readme.txt
(+233 files in other folders)
