name:                Craft3ePascalChapter4
version:             0.1.0.0

author:              Pascal Knodel
maintainer:          pascal.knodel@mail.com

build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     E'4'39, E'4'38, E'4'37, E'4'36, E'4'35, E'4'34, E'4'33, E'4'32, E'4'31, E'4'30, E'4'29, E'4'28, E'4'27, E'4'26, E'4'25, E'4'24, E'4'23, E'4'22, E'4'21, E'4'20, E'4'19, E'4'18, E'4'17, E'4'16, E'4'15, E'4'14, E'4'13, E'4'12, E'4'11, E'4'10, E'4''9, E'4''8, E'4''7, E'4''6, E'4''5, E'4''4, E'4''3, E'4''2, E'4''1, C'4, B'C'4 
  build-depends:       base >=4.7 && <4.8, QuickCheck >=2.6 && <2.7, HUnit >=1.2 && <1.3, Craft3e >=0.1 && <0.2   
  default-language:    Haskell2010