name:                Craft3ePascalChapter6
version:             0.1.0.0          

author:              Pascal Knodel
maintainer:          pascal.knodel@mail.com          
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
  exposed-modules:     E'6'63, E'6'62, E'6'61, E'6'60, E'6'59, E'6'58, E'6'57, E'6'56, E'6'55, E'6'54, E'6'53, E'6'52, E'6'51, E'6'50, E'6'49, E'6'48, E'6'47, E'6'46, E'6'45, E'6'44, E'6'43, E'6'42, E'6'41, E'6'40, E'6'39, E'6'38, E'6'37, E'6'36, E'6'35, E'6'34, E'6'33, E'6'32, E'6'31, E'6'30, E'6'29, E'6'28, E'6'27, E'6'26, E'6'25, E'6'24, E'6'23, E'6'22, E'6'21, E'6'20, E'6'19, E'6'18, E'6'17, E'6'16, E'6'15, E'6'14, E'6'13, E'6'12, E'6'11, E'6'10, E'6''9, E'6''8, E'6''7, E'6''6, E'6''5, E'6''4, E'6''3, E'6''2, E'6''1, C'6, B'C'6
  build-depends:       base >=4.7 && <4.8, Craft3e >=0.1 && <0.2, QuickCheck >=2.6 && <2.7, HUnit >=1.2 && <1.3    
  default-language:    Haskell2010