
name:                Craft3ePascalChapter7
version:             0.1.0.0

author:              Pascal Knodel
maintainer:          pascal.knodel@mail.com

build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     QCC, E'7'35, E'7'34, E'7'33, E'7'32, E'7'31, E'7'30, E'7'29, E'7'28, E'7'27, E'7'26, E'7'25, E'7'24, E'7'23, E'7'22, E'7'21, E'7'20, E'7'19, E'7'18, E'7'17, E'7'16, E'7'15, E'7'14, E'7'13, E'7'12, E'7'11, E'7'10, E'7''9, E'7''8, E'7''7, E'7''6, E'7''5, E'7''4, E'7''3, E'7''2, E'7''1, C'7   
  build-depends:       base >=4.7 && <4.8, QuickCheck >=2.6 && <2.7, split >=0.2 && <0.3, HUnit >=1.2 && <1.3, ghc-prim >=0.3 && <0.4
  default-language:    Haskell2010