name:                Craft3ePascalChapter8
version:             0.1.0.0

author:              Pascal Knodel
maintainer:          pascal.knodel@mail.com
            
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
  exposed-modules:     E'8'23, E'8'22, E'8'21, E'8'20, E'8'19, E'8'18, E'8'17, E'8'16, E'8'15, E'8'14, E'8'13, E'8'12, E'8'11, E'8'10, E'8''9, E'8''8, E'8''7, E'8''6, E'8''5, E'8''4, E'8''3, E'8''2, E'8''1, C'8, B'C'8
  build-depends:       base >=4.7 && <4.8, Craft3ePascalChapter4 >=0.1 && <0.2, Craft3ePascalChapter7 >=0.1 && <0.2, time >=1.4 && <1.5, old-locale >=1.0 && <1.1, QuickCheck >=2.6 && <2.7    
  default-language:    Haskell2010